--- a/src/Solnet.Programs/Solnet.Programs.csproj
+++ b/src/Solnet.Programs/Solnet.Programs.csproj
@@ -1,11 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
-    <PropertyGroup>
-        <TargetFramework>net5.0</TargetFramework>
-    </PropertyGroup>
+  <PropertyGroup>
+    <TargetFramework>net5.0</TargetFramework>
+  </PropertyGroup>
 
-    <ItemGroup>
-      <ProjectReference Include="..\Solnet.Rpc\Solnet.Rpc.csproj" />
-    </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Solnet.Rpc\Solnet.Rpc.csproj" />
+  </ItemGroup>
 
+  <Import Project="..\..\SharedBuildProperties.props"/>
 </Project>
