--- a/src/Solnet.Wallet/Solnet.Wallet.csproj
+++ b/src/Solnet.Wallet/Solnet.Wallet.csproj
@@ -1,16 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
-    <PropertyGroup>
-        <Description>
-            Solnet.Wallet uses BIP32 and BIP39 to generate an HD tree of Solana compatible addresses from a randomly generated word seed.
-        </Description>
-        <TargetFramework>net5.0</TargetFramework>
-    </PropertyGroup>
+  <PropertyGroup>
+    <Description>
+      Solnet.Wallet uses BIP32 and BIP39 to generate an HD tree of Solana compatible addresses from a randomly generated word seed.
+    </Description>
+    <TargetFramework>net5.0</TargetFramework>
+  </PropertyGroup>
 
-    <ItemGroup>
-        <PackageReference Include="Chaos.NaCl.Standard" Version="1.0.0" />
-        <PackageReference Include="NBitcoin" Version="5.0.77" />
-        <PackageReference Include="Portable.BouncyCastle" Version="1.8.2" />
-    </ItemGroup>
-    
+  <ItemGroup>
+    <PackageReference Include="Chaos.NaCl.Standard" Version="1.0.0" />
+    <PackageReference Include="NBitcoin" Version="5.0.77" />
+    <PackageReference Include="Portable.BouncyCastle" Version="1.8.2" />
+  </ItemGroup>
+
+  <Import Project="..\..\SharedBuildProperties.props"/>
 </Project>
