--- a/azure-release-pipeline.yml
+++ b/azure-release-pipeline.yml
@@ -1,10 +1,17 @@
-trigger:
-  - master
+name: 'Release pipeline'
+
+trigger: none
+
+parameters:
+  - name: tag
+    displayName: Version Tag
+    type: string
 
 variables:
   solution: '**/*.sln'
   buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
+  isMaster: $[eq(variables['Build.SourceBranch'], 'refs/heads/master')]    
 
 
 jobs:
@@ -35,3 +42,15 @@ jobs:
         inputs:
           artifactName: 'NuGet packages'
           targetPath: 'artifacts/packages'
+
+      - task: GithubRelease@0
+        displayName: 'Create GitHub Release'
+        condition: eq(variables.isMaster, true)
+        inputs:
+          gitHubConnection: 'bmresearch_tiago'
+          repositoryName: bmresearch/Solnet
+          tagSource: manual
+          tag: ${{ parameters.tag }}
+          assets: 'artifacts/packages/*.nupkg'
+          changeLogCompareToRelease: 'lastFullRelease'
+          changeLogType: 'commitBased'
