--- a/src/Solnet.KeyStore/Solnet.KeyStore.csproj
+++ b/src/Solnet.KeyStore/Solnet.KeyStore.csproj
@@ -7,7 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Chaos.NaCl.Standard" Version="1.0.0" />
-    <PackageReference Include="Portable.BouncyCastle" Version="1.8.2" />
+    <PackageReference Include="BouncyCastle" Version="1.8.2" />
   </ItemGroup>
 
   <ItemGroup>
