Removes NBitcoin dependency.

--- a/src/Solnet.Wallet/Solnet.Wallet.csproj
+++ b/src/Solnet.Wallet/Solnet.Wallet.csproj
@@ -8,9 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
+      <_Parameter1>Solnet.Wallet.Test</_Parameter1>
+    </AssemblyAttribute>
     <PackageReference Include="Chaos.NaCl.Standard" Version="1.0.0" />
-    <PackageReference Include="NBitcoin" Version="5.0.77" />
   </ItemGroup>
 
-  <Import Project="..\..\SharedBuildProperties.props"/>
+  <Import Project="..\..\SharedBuildProperties.props" />
 </Project>
