--- a/src/Solnet.Wallet/Solnet.Wallet.csproj
+++ b/src/Solnet.Wallet/Solnet.Wallet.csproj
@@ -12,6 +12,7 @@
       <_Parameter1>Solnet.Wallet.Test</_Parameter1>
     </AssemblyAttribute>
     <PackageReference Include="Chaos.NaCl.Standard" Version="1.0.0" />
+    <PackageReference Include="Portable.BouncyCastle" Version="1.8.2" />
   </ItemGroup>
 
   <Import Project="..\..\SharedBuildProperties.props"/>
