Add package details

--- a/src/Solnet.KeyStore/Solnet.KeyStore.csproj
+++ b/src/Solnet.KeyStore/Solnet.KeyStore.csproj
@@ -3,6 +3,18 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <AssemblyName>Solnet.KeyStore</AssemblyName>
+    <RootNamespace>Solnet.KeyStore</RootNamespace>
+    <Authors>BTCTrader</Authors>
+    <Company>BTCTrader</Company>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <RepositoryUrl>https://github.com/BTCTrader/Solnet</RepositoryUrl>
+    <Copyright>Portions Copyright (c) 2020 BlockMountain Research, Portions Copyright (c) 2021 BTCTrader</Copyright>
+    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+    <PackageLicenseUrl></PackageLicenseUrl>
+    <PackageId>BTCTrader.Solnet.KeyStore</PackageId>
+    <Product>BTCTrader.Solnet.KeyStore</Product>
+    <Version>1.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
