--- a/src/Solnet.Rpc/Solnet.Rpc.csproj
+++ b/src/Solnet.Rpc/Solnet.Rpc.csproj
@@ -4,6 +4,16 @@
     <TargetFramework>net5.0</TargetFramework>
     <AssemblyName>Solnet.Rpc</AssemblyName>
     <RootNamespace>Solnet.Rpc</RootNamespace>
+    <Authors>BTCTrader</Authors>
+    <Company>BTCTrader</Company>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <RepositoryUrl>https://github.com/BTCTrader/Solnet</RepositoryUrl>
+    <Copyright>Portions Copyright (c) 2020 BlockMountain Research, Portions Copyright (c) 2021 BTCTrader</Copyright>
+    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+    <PackageLicenseUrl></PackageLicenseUrl>
+    <PackageId>BTCTrader.Solnet.Rpc</PackageId>
+    <Product>BTCTrader.Solnet.Rpc</Product>
+    <Version>1.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
