Needs more tests for token program and system program instruction decoding.

--- a/test/Solnet.Programs.Test/Solnet.Programs.Test.csproj
+++ b/test/Solnet.Programs.Test/Solnet.Programs.Test.csproj
@@ -21,4 +21,10 @@
       <ProjectReference Include="..\..\src\Solnet.Programs\Solnet.Programs.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Update="Resources\TestDecodeInstructionFromBlockTransactionMetaInfo.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
 </Project>
