Test for TokenWallet send token and provision ATA + MockRpc rework

--- a/test/Solnet.Extensions.Test/Solnet.Extensions.Test.csproj
+++ b/test/Solnet.Extensions.Test/Solnet.Extensions.Test.csproj
@@ -30,7 +30,16 @@
     <None Update="Resources\TokenWallet\GetBalanceResponse.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Resources\TokenWallet\GetRecentBlockhashResponse.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Resources\TokenWallet\GetTokenAccountsByOwnerResponse2.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Resources\TokenWallet\GetTokenAccountsByOwnerResponse.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Resources\TokenWallet\SendTransactionResponse.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
