Rename TokenInfoResolver to TokenMintResolver et al

--- a/test/Solnet.Extensions.Test/Solnet.Extensions.Test.csproj
+++ b/test/Solnet.Extensions.Test/Solnet.Extensions.Test.csproj
@@ -24,7 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="Resources\TokenInfo\SimpleTokenList.json">
+    <None Update="Resources\TokenMint\SimpleTokenList.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="Resources\TokenWallet\GetBalanceResponse.json">
