Adding import of shared build props

--- a/src/Solnet.Extensions/Solnet.Extensions.csproj
+++ b/src/Solnet.Extensions/Solnet.Extensions.csproj
@@ -10,4 +10,5 @@
     <ProjectReference Include="..\Solnet.Wallet\Solnet.Wallet.csproj" />
   </ItemGroup>
 
+  <Import Project="..\..\SharedBuildProperties.props" />
 </Project>
