--- a/src/Solnet.Rpc/Solnet.Rpc.csproj
+++ b/src/Solnet.Rpc/Solnet.Rpc.csproj
@@ -15,6 +15,8 @@
     </AssemblyAttribute>
     <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
+    <ProjectReference Include="..\..\test\Solnet.Wallet.Test\Solnet.Wallet.Test.csproj" />
+    <ProjectReference Include="..\Solnet.KeyStore\Solnet.KeyStore.csproj" />
     <ProjectReference Include="..\Solnet.Wallet\Solnet.Wallet.csproj" />
   </ItemGroup>
 
