implement token swap

--- a/src/Solnet.Programs/Solnet.Programs.csproj
+++ b/src/Solnet.Programs/Solnet.Programs.csproj
@@ -8,5 +8,9 @@
     <ProjectReference Include="..\Solnet.Rpc\Solnet.Rpc.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\TokenSwap\" />
+  </ItemGroup>
+
   <Import Project="..\..\SharedBuildProperties.props" />
 </Project>
