Work in progress on governance program

--- a/src/Solnet.Programs/Solnet.Programs.csproj
+++ b/src/Solnet.Programs/Solnet.Programs.csproj
@@ -9,6 +9,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Governance\Enums\" />
+    <Folder Include="Governance\Models\" />
     <Folder Include="Models\TokenSwap\" />
   </ItemGroup>
 
